[gd_scene format=3 uid="uid://cenw7gy0m6jl1"]

[ext_resource type="Script" uid="uid://28gh0tk4r4x4" path="res://src/actors/enemies/enemy_base.gd" id="1_enemy"]
[ext_resource type="Script" uid="uid://cc45vge2xbv2a" path="res://src/scripts/health_component.gd" id="2_health"]
[ext_resource type="Texture2D" uid="uid://co683j56ipyxb" path="res://assets/sprites/punk.png" id="2_k1ru1"]
[ext_resource type="Script" uid="uid://bs6471secjsn" path="res://src/scripts/state_machine.gd" id="3_sm"]
[ext_resource type="Script" uid="uid://dj63b1mquoys3" path="res://src/actors/enemies/states/enemy_idle.gd" id="4_idle"]
[ext_resource type="Script" uid="uid://cywm0e4wtknag" path="res://src/actors/enemies/states/enemy_chase.gd" id="5_chase"]
[ext_resource type="Script" uid="uid://bpej04ywkfsmn" path="res://src/actors/enemies/states/enemy_hurt.gd" id="6_hurt"]
[ext_resource type="Script" uid="uid://difiev7vnjjug" path="res://src/actors/enemies/states/enemy_attack.gd" id="8_k1ru1"]
[ext_resource type="Script" uid="uid://b1dkbs86jnsl1" path="res://src/actors/enemies/components/attack_hitbox.gd" id="9_vo0du"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1"]
radius = 84.0
height = 316.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frm3g"]
size = Vector2(21.352478, 78.17346)

[sub_resource type="Animation" id="Animation_rr7jr"]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_aboga"]
resource_name = "Death"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 12, 13]
}

[sub_resource type="Animation" id="Animation_eghvg"]
resource_name = "Domage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_k1ru1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_vo0du"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rr7jr"]
_data = {
&"Attack": SubResource("Animation_rr7jr"),
&"Death": SubResource("Animation_aboga"),
&"Domage": SubResource("Animation_eghvg"),
&"RESET": SubResource("Animation_k1ru1"),
&"Walk": SubResource("Animation_vo0du")
}

[node name="EnemyBase" type="CharacterBody2D" unique_id=1397437944]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_enemy")
speed = 100.0
attack_range = 120.0
knockback_friction = 0.2
knockback_force = 60.0
attack_cooldown = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=397215438]
position = Vector2(-17, 9)
shape = SubResource("CapsuleShape2D_1")

[node name="HealthComponent" type="Node" parent="." unique_id=1332650829]
script = ExtResource("2_health")

[node name="StateMachine" type="Node" parent="." unique_id=1769204968 node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_sm")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" unique_id=1645741775]
script = ExtResource("4_idle")

[node name="Chase" type="Node" parent="StateMachine" unique_id=1099848958]
script = ExtResource("5_chase")

[node name="Hurt" type="Node" parent="StateMachine" unique_id=1886042722]
script = ExtResource("6_hurt")

[node name="Attack" type="Node" parent="StateMachine" unique_id=1432627408]
script = ExtResource("8_k1ru1")

[node name="AttackHitbox" type="Area2D" parent="." unique_id=600063103]
collision_layer = 0
monitoring = false
script = ExtResource("9_vo0du")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox" unique_id=670431089]
position = Vector2(75, -40)
scale = Vector2(5.5188, -0.7810318)
shape = SubResource("RectangleShape2D_frm3g")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=88651236]
position = Vector2(-36.999996, -35.999996)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_k1ru1")
hframes = 4
vframes = 4
frame = 5
region_rect = Rect2(24.626266, 126.51555, 276.42212, 530.48444)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1307722590]
libraries/ = SubResource("AnimationLibrary_rr7jr")

[connection signal="hit_landed" from="AttackHitbox" to="." method="_on_attack_hit_landed"]
